--- a/html/about.html
+++ b/html/about.html
@@ -48,12 +48,12 @@
                         <h2>Oque somos?</h2>
                         <p>
                             Nobuk &eacute; uma loja de vendas country de cal&ccedil;ados e roupas.
-                            <br /> Conhecida pela sua qualidade e confian&ccedil;a com os seus clientes,
+                            <br /> Conhecida pela sua qualidade e confian&ccedil;a com os clientes,
                             <br /> Com pre&ccedil;os acess&iacute;veis e promo&ccedil;&otilde;es de todo tipo.
                             <br /> Inicialmente suas vendas eram focadas em Botinas,
                             <br /> mas atualmente se encontra em vendas de cal&ccedil;ados e
                             <br /> roupas de todos tipo, tamanhos e estilos, como:
-                            <br /> Botas, Botinas, S&aacute;patos, T&ecirc;nis, C&iacute;ntos, Fivelas,
+                            <br /> Botas, Botinas, Sap&aacute;tos, T&ecirc;nis, C&iacute;ntos, Fivelas,
                             <br /> Camisetas, Cal&ccedil;as, Meias, Chap&eacute;us, Bon&eacute;s, Carteiras,
                             <br /> C&eacute;las para cavalo, Rasteirinhas, Chin&eacute;los, Entre outros.
                             <br />
@@ -107,7 +107,7 @@
     <footer>
         <div id="f_direitos_tr">
             <div id="f_direitos_tc">
-                &copy;2016 Todos os direitos reservados
+                &copy;2017 Todos os direitos reservados
                 <br />
                 <br /> Fone: (14) 3325-1983
                 <br />
